--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -556,6 +556,9 @@ footer
     .img_home
       height: 320px
       margin-bottom: 30px
+      background: #d6d6d5
+      .titile
+        font-family: Sitka, sans-serif
 
     //header
       height: 600px
@@ -1815,6 +1818,7 @@ body.client-safari
           color: #404040
           padding-left: 30px
           position: relative
+          cursor: pointer
           &:before
             position: absolute
             top: 50%
