--- a/src/index.jade
+++ b/src/index.jade
@@ -8,7 +8,11 @@ html(lang="ru")
             include ./header.jade
 
             div.container
-                .img_home(style='background: url("../img/content/img_home.jpg") no-repeat top center #d6d6d5;')
+                .img_home
+                    .wrap
+                        .titile Товары для настоящих мужчин
+                        .img-holder
+                            img(src="img/content/img_home.png" )
                 .wrap
 
 
