--- a/src/head.jade
+++ b/src/head.jade
@@ -10,6 +10,17 @@ head
     script(src="/js/alexValidate.js")
     script(src="/js/blueimp-gallery.min.js")
     script(src="/js/jquery-ias.min.js")
+
+    meta(name='Description', content='Symonen.co')
+    meta(name='keywords', content='ремни, кошельки')
+    title Symonen.co
+    meta(property="og:image" content="http://symonen.co/themes/symonenco/assets/img/icons/favicon.png")
+    meta(property="og:title" content="Symonen.c")
+    meta(property="og:description" content="Брендові речі для чоловіків")
+    meta(property="og:url" content="Брендові речі для чоловіків")
+    meta(name='robots', content='index,follow')
+    link(rel="icon" type="image/png" href="http://symonen.co/themes/symonenco/assets/img/icons/favicon.png")
+
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
     meta(name='format-detection', content='telephone=no')
     meta(http-equiv='content-type', content='text/html; charset=utf-8')
