--- a/src/head.jade
+++ b/src/head.jade
@@ -12,7 +12,7 @@ head
     script(src="/js/jquery-ias.min.js")
 
     meta(name='Description', content='Symonen.co')
-    meta(name='keywords', content='ремни, кошельки')
+    meta(name='keywords', content='ремені, гаманці')
     title Symonen.co
     meta(property="og:image" content="http://symonen.co/themes/symonenco/assets/img/icons/favicon.png")
     meta(property="og:title" content="Symonen.c")
@@ -21,6 +21,7 @@ head
     meta(name='robots', content='index,follow')
     link(rel="icon" type="image/png" href="http://symonen.co/themes/symonenco/assets/img/icons/favicon.png")
 
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic' rel='stylesheet' type='text/css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
     meta(name='format-detection', content='telephone=no')
     meta(http-equiv='content-type', content='text/html; charset=utf-8')
