--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -557,6 +557,8 @@ footer
       height: 320px
       margin-bottom: 30px
       background: #d6d6d5
+      .wrap
+        position: relative
 
       .titile
         font-family: 'Open Sans', sans-serif
