--- a/src/index.jade
+++ b/src/index.jade
@@ -80,75 +80,76 @@ html(lang="ru")
                                             input(type="checkbox" name="size_l" value="s" id="size_l" )
                                             label(for="size_l") L
                         .products
-                            .product
-                                a(href="/product.html")
+                            .list_product
+                                .product
+                                    a(href="/product.html")
 
-                                    .images.img-holder
-                                        span.new_mark NEW
-                                        span.sale_mark SALE %
-                                        img(src="img/content/img_product2.jpg" alt="Товар 2")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                                    .old_price  490,00 грн
-                            .product
-                                a(href="/product.html")
-                                    .images.img-holder
-                                        span.sale_mark SALE %
-                                        img(src="img/content/img_product2.jpg" alt="Товар 3")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                            .product
-                                a(href="/product.html")
-                                    .images.img-holder
-                                        span.new_mark NEW
-                                        img(src="img/content/img_product2.jpg" alt="Товар 4")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                            .product
-                                a(href="/product.html")
-                                    .images.img-holder
-                                        img(src="img/content/img_product2.jpg" alt="Товар 5")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                            .product
-                                a(href="/product.html")
-                                    .images.img-holder
-                                        img(src="img/content/img_product2.jpg" alt="Товар 2")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                            .product
-                                a(href="/product.html")
+                                        .images.img-holder
+                                            span.new_mark NEW
+                                            span.sale_mark SALE %
+                                            img(src="img/content/img_product2.jpg" alt="Товар 2")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                        .old_price  490,00 грн
+                                .product
+                                    a(href="/product.html")
+                                        .images.img-holder
+                                            span.sale_mark SALE %
+                                            img(src="img/content/img_product2.jpg" alt="Товар 3")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                .product
+                                    a(href="/product.html")
+                                        .images.img-holder
+                                            span.new_mark NEW
+                                            img(src="img/content/img_product2.jpg" alt="Товар 4")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                .product
+                                    a(href="/product.html")
+                                        .images.img-holder
+                                            img(src="img/content/img_product2.jpg" alt="Товар 5")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                .product
+                                    a(href="/product.html")
+                                        .images.img-holder
+                                            img(src="img/content/img_product2.jpg" alt="Товар 2")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                .product
+                                    a(href="/product.html")
 
-                                    .images.img-holder
-                                        img(src="img/content/img_product2.jpg" alt="Товар 3")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                            .product
-                                a(href="/product.html")
-                                    .images.img-holder
-                                        img(src="img/content/img_product2.jpg" alt="Товар 4")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                            .product
-                                a(href="/product.html")
-                                    .images.img-holder
-                                        img(src="img/content/img_product2.jpg" alt="Товар 5")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
-                            .product
-                                a(href="/product.html")
-                                    .images.img-holder
-                                        img(src="img/content/img_product2.jpg" alt="Товар 4")
-                                    .product_name Ремінь шкіряний S.co - 006
-                                    .price 390,00 грн
+                                        .images.img-holder
+                                            img(src="img/content/img_product2.jpg" alt="Товар 3")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                .product
+                                    a(href="/product.html")
+                                        .images.img-holder
+                                            img(src="img/content/img_product2.jpg" alt="Товар 4")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                .product
+                                    a(href="/product.html")
+                                        .images.img-holder
+                                            img(src="img/content/img_product2.jpg" alt="Товар 5")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
+                                .product
+                                    a(href="/product.html")
+                                        .images.img-holder
+                                            img(src="img/content/img_product2.jpg" alt="Товар 4")
+                                        .product_name Ремінь шкіряний S.co - 006
+                                        .price 390,00 грн
 
 
-                        .pagination
-                            ul
-                                li.prev
-                                    a(href="#")
-                                li.next
-                                    a(href="/?start=12")
+                            .pagination
+                                ul
+                                    li.prev
+                                        a(href="#")
+                                    li.next
+                                        a(href="#")
 
 
             include ./footer.jade
