--- a/src/index.jade
+++ b/src/index.jade
@@ -35,7 +35,7 @@ html(lang="ru")
                                             label(for="option2") Кошелек
                                 .list_attribute
                                     .name_attribute По цене:
-                                    .attribute_holder
+                                    .radio
                                         .attribute
                                             input(type="radio" name="attribute_price" value="От дорогих к дешевым" id="option3" checked)
                                             label(for="option3") От дорогих к дешевым
@@ -44,7 +44,7 @@ html(lang="ru")
                                             label(for="option4") От дешевых к дорогим
                                 .list_attribute
                                     .name_attribute Сортировать по:
-                                    .attribute_holder
+                                    .radio
                                         .attribute
                                             input(type="radio" name="attribute_order" value="Популярности" id="option5" )
                                             label(for="option5") Популярности
