fixed pagination, filter

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -554,7 +554,7 @@ footer
     box-sizing: border-box
   &.home
     .pagination
-      display: none
+
     .img_home
       height: 320px
       margin-bottom: 30px
@@ -1865,6 +1865,12 @@ body.client-safari
   .pagination
     padding-top: 50px
     margin-bottom: 0
+    li
+      width: auto
+      height: auto
+      a
+        height: auto
+        filter: none
   .ias-trigger
     text-align: center
     margin-top: 50px
