--- a/src/head.jade
+++ b/src/head.jade
@@ -9,15 +9,15 @@ head
     script(src="/js/untils.js")
     script(src="/js/alexValidate.js")
     script(src="/js/blueimp-gallery.min.js")
-    script(src="/js/jquery-ias.min.js")
+
 
     meta(name='Description', content='Symonen.co')
-    meta(name='keywords', content='ремені, гаманці')
+    meta(name='keywords', content='')
     title Symonen.co
     meta(property="og:image" content="http://symonen.co/themes/symonenco/assets/img/icons/favicon.png")
     meta(property="og:title" content="Symonen.c")
-    meta(property="og:description" content="Брендові речі для чоловіків")
-    meta(property="og:url" content="Брендові речі для чоловіків")
+    meta(property="og:description" content="")
+    meta(property="og:url" content="")
     meta(name='robots', content='index,follow')
     link(rel="icon" type="image/png" href="http://symonen.co/themes/symonenco/assets/img/icons/favicon.png")
 
